Rename string sample sort to string merge sort

--- a/dsss/string_sorting/CMakeLists.txt
+++ b/dsss/string_sorting/CMakeLists.txt
@@ -7,7 +7,7 @@
 ################################################################################
 
 set(DSSS_DISTRIBUTED_SORTING
-  distributed/sample_sort.cpp)
+  distributed/merge_sort.cpp)
 
 set(DSSS_SEQUENTIAL_SORTING
   sequential/std_sort.cpp)
