--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/googletest"]
 	path = external/googletest
 	url = https://github.com/google/googletest.git
+[submodule "external/ips4o"]
+	path = external/ips4o
+	url = https://github.com/SaschaWitt/ips4o.git
