--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,12 @@ project(dsss)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+find_program(CCACHE_FOUND ccache)
+if(CCACHE_FOUND)
+  set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
+  set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
+endif(CCACHE_FOUND)
+
 option(DSSS_OVERSUBSCRIBE
   "Run tests with mpirun [...] --oversubscribe.
   This may be necessary for environments with less than four cores." OFF)
@@ -26,8 +32,12 @@ endif(NOT CMAKE_BUILD_TYPE)
 find_package(MPI REQUIRED)
 if (MPI_FOUND)
   message(STATUS "MPI FOUND: ${MPI_C_INCLUDE_PATH}")
-  include_directories(SYSTEM ${MPI_INCLUDE_PATH})
+  include_directories(${MPI_INCLUDE_PATH})
 endif()
+
+set(DSSS_FLAGS "-Wall;-pedantic;-Wextra")
+set(DSSS_DEBUG_FLAGS "-O0;-ggdb")
+set(DSSS_RELEASE_FLAGS "-O3;-march=native;-DNDEBUG")
 
 add_subdirectory(dsss)
 add_subdirectory(benchmark)
